--- a/src/components/nav/Nav.module.css
+++ b/src/components/nav/Nav.module.css
@@ -2,6 +2,7 @@
   position: relative;
   min-width: 250px;
   border-right: 1px solid var(--border);
+  /* height: calc(100% - 200px); */
 }
 
 .logo {
@@ -26,11 +27,11 @@
 .nav {
   position: sticky;
   top: 0;
-  padding-top: 1rem;
+  padding-top: 2.3rem;
 }
 
 .navlist {
-  margin-top: 3.1rem;
+  margin-top: 2rem;
   position: sticky;
   top: 0;
   padding: 1rem 1rem;
@@ -108,8 +109,4 @@
 }
 .link {
   text-decoration: none;
-}
-
-.navWrapper {
-  height: 100%;
 }
